typo + commentaire + factorisation de code + simplification